<resources>
    <string name="app_name">Dream Flashcards</string>

    <!-- Login Activity -->
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_email">Sign in with Email</string>

    <!-- Email Password login -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- App Menu -->
    <string name="sign_out_title">Sign out</string>

    <!-- Set Card Options Menu -->
    <string name="modify_set_text">Modify set</string>
    <string name="delete_set_text">Delete set</string>

    <!-- Flashcard Card Options Menu -->
    <string name="modify_flashcard_text">Modify flashcard</string>
    <string name="delete_flashcard_text">Delete flashcard</string>

    <!-- Sets Fragment -->
    <string name="add_new_set">Add new set</string>
    <string name="filter_hint">Filter</string>

    <!-- Set Item -->
    <string name="words_text">Words: </string>
    <string name="option_menu_sign">⋮</string>

    <!-- Create Set Fragment -->
    <string name="create_set">Create set</string>
    <string name="set_name">Set name</string>
    <string name="choose_set_name">Choose the name of your set</string>
    <string name="choose_set_color">Choose the color of your set</string>

    <!-- Flashcards Fragment -->
    <string name="done_button_text">Done</string>
    <string name="add_flashcard_button_text">Add</string>

    <!-- Add Flashcards Fragment -->
    <string name="term_text">Term</string>
    <string name="definition_text">Definition</string>
    <string name="term_helper_text">Insert term</string>
    <string name="definition_helper_text">Insert definition</string>
    <string name="add_flashcard_text">Add flashcard</string>

    <!-- Facebook variables -->
    <string name="facebook_app_id">399567662122816</string>
    <string name="fb_login_protocol_scheme">fb399567662122816</string>
    <string name="facebook_client_token">b83ea3544feabcf63d387a8e6da4e3ee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>