<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.app.CreateSetFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/definition_input_layout"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        app:helperText="@string/term_helper_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/term_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:hint="@string/term_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/definition_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        app:helperText="@string/definition_helper_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/definition_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:hint="@string/definition_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_flashcard_button"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/definition_input_layout"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:text="@string/add_flashcard_text" />

</RelativeLayout>