<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.app.FlashcardsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorAnimationMode="elastic"
        app:tabMode="scrollable"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_dropdown_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:paddingHorizontal="16dp"
        android:hint="@string/filter_hint"
        android:elevation="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintBottom_toBottomOf="@id/view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/filter_dropdown_menu_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flashcards_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="12dp"
        android:paddingTop="4dp"
        android:background="#F9F9F9"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button_text"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="24dp"
            app:icon="@drawable/ic_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_flashcard_button"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/RecyclerViewButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_flashcard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="30dp"
            android:text="@string/add_flashcard_button_text"
            app:icon="@drawable/ic_add_flashcard"
            app:layout_constraintStart_toEndOf="@id/done_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/RecyclerViewButton"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>