<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="24dp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/button_google_sign_in_border"
        app:layout_constraintBottom_toTopOf="@id/facebook_sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/google_icon"/>

        <TextView
            android:id="@+id/google_sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/sign_in_with_google"/>

    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:paddingTop="33dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/facebook_sign_in_button"/>

    <LinearLayout
        android:id="@+id/facebook_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/button_facebook_sign_in_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/facebook_icon"/>

        <TextView
            android:id="@+id/facebook_sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/sign_in_with_facebook"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/button_email_sign_in_border"
        app:layout_constraintTop_toBottomOf="@id/facebook_sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/email_icon"/>

        <TextView
            android:id="@+id/email_sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/sign_in_with_email"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>